Fixes for the  review comments provided
